# codey

./: .dockerignore  .gitignore  Cargo.toml  LIBRARY.md  Makefile  README.md  RELEASE.md  WORKSPACE_PROPOSAL.md  build.rs  config.example.toml
.github/workflows/: integration.yml  release.yml
clients/: INTEGRATION.md
clients/python/: README.md  pyproject.toml
clients/python/codey_client/: __init__.py  client.py  schemas.py
clients/python/examples/: basic_chat.py
container/: Dockerfile  README.md  docker-compose.yml  run.sh
crates/codey/: Cargo.toml
crates/codey-server/: Cargo.toml
crates/codey-server/src/: main.rs  protocol.rs  server.rs  session.rs
crates/codey/src/: auth.rs  lib.rs  main.rs  prompts.rs
crates/codey/src/ide/nvim/: mod.rs
crates/codey/src/ide/nvim/lua/: has_unsaved_changes.lua  navigate_to.lua  show_file_preview.lua
crates/codey/src/llm/: agent.rs  mod.rs
crates/codey/src/tools/: README.md  exec.rs  io.rs  mod.rs
crates/codey/src/tools/impls/: edit_file.rs  fetch_url.rs  shell.rs  web_search.rs  write_file.rs
crates/codey/src/ui/: mod.rs
crates/codey/src/ui/snapshots/: codey__ui__input__tests__snapshot_multiline.snap  codey__ui__input__tests__snapshot_with_pasted_attachment.snap  codey__ui__input__tests__snapshot_with_text.snap
docs/: browser-sessions.md
lib/: README.md  apply-patches.sh
lib/patches/genai/: anthropic-extra-headers.patch  apply.sh  empty-tool-arguments.patch  openai-tool-call-index.patch  streamer-thinking-fix.patch  thinking-blocks-signatures.patch  thinking-blocks-tool-use.patch
lib/patches/genai-0.5/: apply.sh  oauth-support.patch
lib/patches/ratatui-core/: Cargo.toml.template  apply.sh  buffer-diff.patch  buffer-mod.patch  ratatui-core-simd-diff.patch  simd-diff.patch
lib/patches/readability/: apply.sh  list-page-detection.patch  remove-twitter-unlikely.patch
lib/ratatui-core/: .gitignore  Cargo.toml
lib/ratatui-core/src/: lib.rs
patches/: genai-interleaved-thinking.patch
research/: agent-sdk-credit-backend.md  anthropic-oauth.md  async-state-management.md  browser-sessions-review.md  concurrent-tool-execution.md  effect-polling-system.md  fast-mode.md  genai-thinking-blocks.md  integrated-subagent-events.md  native-scrollback.md  notifications-primitive.md  render-performance.md  sub-agent-architecture.md  terminal-ui-testing.md  token-usage-optimization.md  virtualized-scroll-views.md  websocket-server-module.md
src/: app.rs  auth.rs  commands.rs  compaction.rs  config.rs  effect.rs  lib.rs  main.rs  message.rs  notifications.rs  permission.rs  profiler.rs  prompts.rs  security.rs  shared_tasks.rs  tasks.rs  tool_filter.rs  transcript.rs  update.rs
src/auth/: api_key.rs  mod.rs  oauth.rs  storage.rs
src/ide/: mod.rs  nvim.rs
src/ide/nvim/: mod.rs
src/ide/nvim/lua/: claim_preview.lua  close_preview.lua  diagnostics_tracking.lua  get_diagnostics.lua  has_unsaved_changes.lua  reload_buffer.lua  selection_tracking.lua  show_diff.lua  show_file_preview.lua
src/llm/: agent.rs  background.rs  client.rs  mod.rs  registry.rs  stream.rs  types.rs
src/tools/: README.md  edit_file.rs  edit_file.rs.bak  exec.rs  fetch_url.rs  fetch_url.rs.bak  handlers.rs  io.rs  mod.rs  pipeline.rs  read_file.rs  read_file.rs.bak  schema.rs  shell.rs  shell.rs.bak  web_search.rs  write_file.rs  write_file.rs.bak
src/tools/browser/: mod.rs  session.rs
src/tools/impls/: agent_management.rs  background_tasks.rs  browser_session.rs  edit_file.rs  fetch_html.rs  fetch_url.rs  mod.rs  open_file.rs  read_file.rs  record_correction.rs  shell.rs  spawn_agent.rs  task.rs  tasks.rs  web_search.rs  write_file.rs
src/ui/: chat.rs  input.rs  input_tests.rs  markdown.rs  mod.rs  permission.rs  status.rs
src/ui/snapshots/: codey__ui__input__tests__snapshot_after_complex_edits.snap  codey__ui__input__tests__snapshot_empty_input.snap  codey__ui__input__tests__snapshot_special_chars.snap  codey__ui__input__tests__snapshot_with_ide_selection.snap  codey__ui__input__tests__snapshot_wrapped_long_text.snap
tests/integration/: Dockerfile  conftest.py  docker-compose.yml  harness.py  requirements.txt  run.sh  test_edit_file.py  test_read_file.py  test_shell.py  test_write_file.py
tools/: profile_viewer.py
