[package]
name = "codey"
version = "0.1.0"
edition = "2021"
authors = ["Codey Contributors"]
description = "A terminal-based AI coding assistant"
license = "MIT"
repository = "https://github.com/tcdent/codey"

[dependencies]
# TUI
ratatui = "0.30.0-beta.0"
ratatui-core = "0.1.0-beta.0"  # Explicit dep for feature forwarding
tui-scrollview = "0.6.0-alpha.0"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# LLM client (multi-provider)
genai = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
dirs = "5"

# CLI arguments
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
open = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
async-trait = "0.1"
dotenvy = "0.15.7"
ratskin = "0.3"
typetag = "0.2.21"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# =============================================================================
# SIMD-Optimized Dependencies
# =============================================================================
# Uses patched ratatui-core with SIMD-accelerated buffer diffing.
# SIMD is enabled by default on x86_64 and aarch64.
#
# To disable SIMD (for debugging or compatibility):
#   cargo build --features no-simd
#
# To regenerate patched sources:
#   ./lib/apply-patches.sh
#
# See lib/README.md and research/render-performance.md for details.
# =============================================================================

[patch.crates-io]
ratatui-core = { path = "lib/ratatui-core" }

[features]
default = []
# Disable SIMD acceleration in buffer diffing
no-simd = ["ratatui-core/no-simd"]
