[workspace]
resolver = "2"
members = [
    "crates/codey",
    "crates/codey-server",
]

[workspace.package]
version = "0.1.0-rc.5"
edition = "2021"
authors = ["Codey Contributors"]
license = "MIT"
repository = "https://github.com/tcdent/codey"

[workspace.dependencies]
# Internal crates
codey = { path = "crates/codey" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# LLM client
genai = "0.4.4"

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
fancy-regex = "0.14"
unicode-width = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
urlencoding = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
async-trait = "0.1"
async-stream = "0.3"
dotenvy = "0.15.7"
typetag = "0.2.21"

# TUI (CLI only)
ratatui = { version = "0.30.0-beta.0", features = ["scrolling-regions"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratskin = "0.3"
textwrap = "0.16.2"

# CLI arguments
clap = { version = "4", features = ["derive", "env"] }

# IDE integration
nvim-rs = { version = "0.9", features = ["use_tokio"] }
open = "5"

# Web content extraction
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
readability = "0.3"
htmd = "0.1"

# WebSocket
tokio-tungstenite = "0.24"

# Testing
tokio-test = "0.4"
tempfile = "3"
pretty_assertions = "1"
insta = "1.40"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = false
debug = true
